medical/networking/httpRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: my-app-route
  namespace: project-b
spec:
  parentRefs:
  - name: my-web-gateway
    namespace: project-a
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /blog
    backendRefs:
    - name: my-blog-service
      port: 8080
  - matches:
    - path:
        type: PathPrefix
        value: /about
    backendRefs:
    - name: my-about-service
      port: 8080
